--- a/wwwroot/app/components/node.component.css
+++ b/wwwroot/app/components/node.component.css
@@ -11,9 +11,9 @@
 .nodeCapacityViolation { color: #e81123; }
 .nodeCapacityWarning { color: #FCD116; }
 
-.selectorButton { position: relative; cursor: pointer; color: #CCCCCC; line-height: 1em; }
-.selectorArrow { position: absolute; top: 10px; }
-.selectorLabel { position: absolute; float: left; top: 28px; left: 15px; color: #CCCCCC; transform: rotate(90deg); transform-origin: left top 0; }
+.selectorButton { cursor: pointer; color: #CCCCCC; line-height: 1em; }
+.selectorArrow { position: absolute; }
+.selectorLabel { position: absolute; top: 18px; left: 15px; color: #CCCCCC; transform: rotate(90deg); transform-origin: left top 0; }
 
 .application-list { margin: 0; padding: 0; }
 .application { margin: 2px 0; padding: 0 2px; border: 1px solid #000000; font-size: 10px; position: relative; overflow: hidden; }
